[package]
name = "tmp108"
version = "0.1.0"
authors = ["Felipe Balbi <febalbi@microsoft.com>"]
repository = "https://github.com/OpenDevicePartnership/tmp108"
license = "MIT"
description = "Platform-agnostic Rust driver for the TMP108 temperature sensor."
readme = "README.md"
keywords = ["temperature", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/OpenDevicePartnership/tmp108"
documentation = "https://docs.rs/tmp108"
include = [
	"/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE",
]
edition = "2021"
rust-version = "1.83.0"

[dependencies]
bilge = "0.2.0"
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-sensors = { git = "https://github.com/OpenDevicePartnership/embedded-sensors", optional = true }
embedded-sensors-async = { git = "https://github.com/OpenDevicePartnership/embedded-sensors", optional = true }

[features]
full = [ "async", "embedded-sensors", "embedded-sensors-async" ]
async = [ "dep:embedded-hal-async" ]
embedded-sensors = [ "dep:embedded-sensors" ]
embedded-sensors-async = [ "dep:embedded-sensors-async" ]

[dev-dependencies]
assert_approx_eq = "1.1.0"
embedded-hal-mock = { version = "0.11.1", features = [ "embedded-hal-async" ] }
tokio = { version = "1.37.0", features = [ "rt", "macros" ] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
correctness = "forbid"
suspicious = "forbid"
perf = "forbid"
style = "forbid"
pedantic = "deny"
